--- a/src/index.css
+++ b/src/index.css
@@ -12,23 +12,30 @@ code {
     monospace;
 }
 
-.todo-form {
-  width: 500px;
-  margin: 0 auto;
-  margin-top: 2em;
-  margin-bottom: 3em;
+.photo-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.todo {
-  text-transform: capitalize;
-  font-weight: 700;
-}
-
-.delete-icon {
+.photo {
   cursor: pointer;
+  width: 200px;
+  margin: 1em 0;
 }
 
-.delete-icon:hover {
-  color: rgba(255, 37, 37, 0.934);
-  transition: 0.3s ease;
+.large {
+  width: 250px;
+}
+
+@media (min-width: 600px) {
+  .photo-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .photo {
+    margin: 1em;
+  }
 }
